--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,3 +1,15 @@
+@media (min-width: 1024px) {
+  .d-1024-none {
+    display: none !important;
+  }
+}
+
+@media (max-width: 1023px) {
+  .d-1023-none {
+    display: none !important;
+  }
+}
+
 @media (min-width: 769px) {
   .d-769-none {
     display: none !important;
@@ -6,6 +18,18 @@
 
 @media (max-width: 768px) {
   .d-768-none {
+    display: none !important;
+  }
+}
+
+@media (min-width: 576px) {
+  .d-576-none {
+    display: none !important;
+  }
+}
+
+@media (max-width: 575px) {
+  .d-575-none {
     display: none !important;
   }
 }
@@ -69,6 +93,10 @@ p {
 
 .fs-48 {
   font-size: 48px !important;
+}
+
+.fs-32 {
+  font-size: 32px !important;
 }
 
 .fs-24 {
@@ -253,6 +281,10 @@ p {
 
 .lh-26 {
   line-height: 26px;
+}
+
+.lh-24 {
+  line-height: 24px;
 }
 
 @media screen and (max-width: 1366px) {
