--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -739,7 +739,7 @@ table.custom-table {
         }
       }
 
-      .slidecontainer {
+      .p-container {
         @media screen and (max-width: 575px) {
           padding-bottom: 7rem;
         }
