--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -800,7 +800,7 @@ table.custom-table tr td {
 }
 
 @media screen and (max-width: 575px) {
-  #allocation-confirm .custom-modal .modal-body .slidecontainer {
+  #allocation-confirm .custom-modal .modal-body .p-container {
     padding-bottom: 7rem;
   }
 }
