--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -241,6 +241,18 @@ p {
   }
 }
 
+@media screen and (max-width: 575px) {
+  .fs-575-12 {
+    font-size: 12px !important;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .fs-575-10 {
+    font-size: 10px !important;
+  }
+}
+
 @media screen and (max-width: 490px) {
   .fs-490-14 {
     font-size: 14px !important;
@@ -290,6 +302,24 @@ p {
 @media screen and (max-width: 1366px) {
   .lh-1366-22 {
     line-height: 22px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .lh-1366-20 {
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .lh-1366-18 {
+    line-height: 18px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .lh-1366-16 {
+    line-height: 16px;
   }
 }
 
