fixes font-weight

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,6 +506,10 @@ select.list-dt:focus {
   margin: 0px auto;
   display: table;
 }
+#progressbar li.done strong span ,
+#progressbar li.active strong span {
+ font-weight: 600;
+}
 #progressbar li strong i {
   height: 16px;
   width: 16px;
