grey colour fixed

--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -2743,5 +2743,5 @@ input[type="date"]::-webkit-input-placeholder {
 input::placeholder,
 textarea::placeholder {
   // color: $color3;
-  color: #b2b2b2;
+  color: #b2b2b2a6;
 }
