--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -3080,21 +3080,21 @@ input[type="date"]::-webkit-input-placeholder {
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #b2b2b2;
+  color: #b2b2b2a6;
 }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-  color: #b2b2b2;
+  color: #b2b2b2a6;
 }
 
 input::-ms-input-placeholder,
 textarea::-ms-input-placeholder {
-  color: #b2b2b2;
+  color: #b2b2b2a6;
 }
 
 input::placeholder,
 textarea::placeholder {
-  color: #b2b2b2;
+  color: #b2b2b2a6;
 }
 /*# sourceMappingURL=utilities.css.map */
