--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1321,9 +1321,9 @@ table.custom-table tr td {
   overflow: hidden;
   width: 100%;
   height: 132px;
-  border: 1px dotted #ffc32c;
+  border: 1px dashed #ffc32c;
   background-color: transparent;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 @media screen and (max-width: 768px) {
