--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1194,9 +1194,9 @@ table.custom-table {
       overflow: hidden;
       width: 100%;
       height: 132px;
-      border: 1px dotted $color1;
+      border: 1px dashed $color1;
       background-color: transparent;
-      border-radius: 4px;
+      border-radius: 8px;
 
       @media screen and (max-width: 768px) {
         height: 80px;
